# Farm-market

./: 1.txt  Animal.cpp  Animal.h  CMakeLists.txt  CPP_FARM  Chicken.cpp  Chicken.h  ChickenFarm.cpp  ChickenFarm.h  Cow.cpp  Cow.h  CowFarm.cpp  CowFarm.h  Farm.cpp  Farm.h  Farm_animal_Exceptions.h  Market.cpp  Market.h  Product.cpp  Product.h  ShayGiladiInput.txt  Sheep.cpp  Sheep.h  SheepFarm.cpp  SheepFarm.h  main.cpp  makefile
